chore(horarios): fixes and get route added
