# Backend/src/routes/horarios.routes.js
@@ -1,11 +1,14 @@
 import { Router } from 'express'
-import { validateHorariosUpdate } from '../middlewares/horariosMiddleware.js'
-import { updateHorariosController }  from '../controllers/horariosController.js'
+import { validateGetHorarios, validateUpdateHorarios } from '../middlewares/horariosMiddleware.js'
+import { getHorariosController, updateHorariosController }  from '../controllers/horariosController.js'
 
 const router = Router();
 
+router.get('/horarios/:id_medico',
+	validateGetHorarios, getHorariosController);
+
 router.put('/horarios/actualizar/:id_medico',
-	validateHorariosUpdate, updateHorariosController);
+	validateUpdateHorarios, updateHorariosController);
 
 export default router;
 
